--- a/index.html
+++ b/index.html
@@ -566,8 +566,8 @@
                         <div className="flex items-center gap-3">
                             <div className="bg-slate-900 p-2 rounded-lg text-white shadow-lg"><Icons.Stethoscope size={20} /></div>
                             <div>
-                                <h1 className="text-lg font-bold text-slate-900 leading-none uppercase tracking-tighter flex items-center gap-2">Genel Cerrahi Dashboard {!isSyncing && <span className="text-[10px] bg-green-100 text-green-700 px-2 py-0.5 rounded-full flex items-center gap-1"><Icons.Wifi size={10}/> Online</span>}</h1>
-                                <p className="text-[9px] text-slate-500 font-bold uppercase tracking-widest mt-1 italic">Klinik İzlem ve Tam Yatak Planı</p>
+                                <h1 className="text-lg font-bold text-slate-900 leading-none uppercase tracking-tighter flex items-center gap-2">KOÜ Genel Cerrahi Servis {!isSyncing && <span className="text-[10px] bg-green-100 text-green-700 px-2 py-0.5 rounded-full flex items-center gap-1"><Icons.Wifi size={10}/> Online</span>}</h1>
+                                <p className="text-[9px] text-slate-500 font-bold uppercase tracking-widest mt-1 italic">Klinik İzlem ve Yatak Planları </p>
                             </div>
                         </div>
                         <div className="flex gap-2 w-full sm:w-auto">
@@ -752,3 +752,4 @@
 </body>
 
 </html>
+
